# shipping-cost-comparator

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  ADMIN_ACCESS.md  CLEANUP_SUMMARY.md  Dockerfile  MIGRATION_SUMMARY.md  README.md  TEST_MIGRATION_SUMMARY.md  audit_pincodes.py  create_admin.py  docker-compose.yml  logistics.db  pyproject.toml  pytest.ini  requirements.txt  start_django.bat  start_django.sh
.claude/: settings.local.json
app/: engine.py  main.py  schemas.py  zones.py
app/config/: metro_cities.json  settings.json  special_states.json
app/data/: rate_cards.json
config/: settings.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
courier/: admin.py  authentication.py  debug_zones.py  engine.py  exceptions.py  models.py  permissions.py  serializers.py  services.py  throttling.py  urls.py  verify_logic.py  views.py  zones.py
courier/config/: alias_map.json  charges_config.json  settings.json
courier/data/: ACPL_Test_Pincodes.csv  BlueDart_Test_Pincodes.csv  ftl_rates.json  master_card.json  rate_cards.json
courier/migrations/: 0001_initial.py  0002_alter_order_status_ftlorder.py  0003_ftlorder_source_address_alter_ftlorder_email.py  0004_ftlorder_booked_at.py  0005_decimal_money_fields.py
courier/tests/: README.md  __init__.py  conftest.py  settings_test.py  test_acpl_price_verification.py  test_add_carrier.py  test_admin_extended.py  test_api.py  test_api_calc.py  test_api_orders.py  test_bluedart_price_verification.py  test_delhivery_price_verification.py  test_engine.py  test_ftl.py  test_ftl_calc_keys.py  test_health.py  test_orders.py  test_serializers.py  test_shadowfax_cost_verification.py  test_shadowfax_price_verification.py  test_validation.py  test_vtrans_cost_verification.py  test_zones.py
courier/views/: __init__.py  admin.py  base.py  ftl.py  invoices.py  orders.py  public.py
static/: admin.html  admin_panel.html  dashboard.html  index.html
static/js/dashboard/: calculator.js
